Styled index page

--- a/index.html
+++ b/index.html
@@ -11,33 +11,45 @@
 
 <body>
     <div class="container">
-        
-            <header>
-                <h1>Bootstrap Examples</h1>
-            </header>
 
-             <nav>
-                <a href="">Home</a>
-            </nav>
+        <header>
+            <h1>Bootstrap Examples</h1>
+        </header>
+
+        <nav>
+            <a href="">Home</a>
+        </nav>
 
         <main>
 
             <div class="row">
-            <p class="col-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, veniam debitis. Recusandae numquam nobis
-            perspiciatis aperiam laborum eum ut voluptatum quisquam. Sed, blanditiis repudiandae minus quibusdam enim
-            dolores corporis fugiat.
-            </p>
-            <p class="col-sm-4">Debitis placeat nobis tempore quo. Libero harum dolore autem est cum neque, deserunt excepturi quisquam odio!
-            Nesciunt aspernatur animi at sed, inventore vel, praesentium molestias fuga, iusto dolor ullam! Laborum!
-            </p>
-            <p class="col-sm-4">Ut deserunt nulla magni modi perferendis ratione nostrum cumque corporis non porro. Tenetur vero, pariatur
-            excepturi perferendis velit perspiciatis enim officiis laboriosam tempora sed voluptatum nam quisquam facere
-            architecto odit.
-            </p>
+                <div class="col-sm-4">
+                    <p class="text-md-center text-sm-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Eius, veniam debitis. Recusandae numquam nobis
+                        perspiciatis aperiam laborum eum ut voluptatum quisquam. Sed, blanditiis repudiandae minus
+                        quibusdam enim
+                        dolores corporis fugiat.
+                    </p>
+                </div>
+                <div class="col-sm-4">
+                    <p class="text-primary text-md-center text-sm-left border border-primary p-2">Debitis placeat nobis tempore quo. Libero harum
+                        dolore autem est cum neque, deserunt excepturi quisquam odio!
+                        Nesciunt aspernatur animi at sed, inventore vel, praesentium molestias fuga, iusto dolor ullam!
+                        Laborum!
+                    </p>
+                </div>
+                <div class="col-sm-4">
+                    <p class="text-md-center text-sm-left">Ut deserunt nulla magni modi perferendis ratione nostrum
+                        cumque corporis non porro. Tenetur vero, pariatur
+                        excepturi perferendis velit perspiciatis enim officiis laboriosam tempora sed voluptatum nam
+                        quisquam facere
+                        architecto odit.
+                    </p>
+                </div>
             </div>
 
         </main>
-        
+
     </div>
 
 </body>
