--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <a href="">Home</a>
             
             <a href="login.html">Login</a>
+
+            <a href="cards.html">Animal Cards</a>
         </nav>
 
         <main>
