--- a/index.html
+++ b/index.html
@@ -16,13 +16,39 @@
             <h1>Bootstrap Examples</h1>
         </header>
 
+        <!---
         <nav class="mb-5">
             <a href="">Home</a>
             
             <a href="login.html">Login</a>
 
             <a href="cards.html">Animal Cards</a>
+        </nav> -->
+
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <div class="container ">
+                <a class="navbar-brand" href="./index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="./login.html">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./cards.html">Animal Cards</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
+
 
         <main>
 
@@ -36,7 +62,8 @@
                     </p>
                 </div>
                 <div class="col-sm-4">
-                    <p class="text-primary text-md-center text-sm-left border border-primary p-2">Debitis placeat nobis tempore quo. Libero harum
+                    <p class="text-primary text-md-center text-sm-left border border-primary p-2">Debitis placeat nobis
+                        tempore quo. Libero harum
                         dolore autem est cum neque, deserunt excepturi quisquam odio!
                         Nesciunt aspernatur animi at sed, inventore vel, praesentium molestias fuga, iusto dolor ullam!
                         Laborum!
